* Author: Mike FABIAN <mfabian@redhat.com>
* 29 Mar 2017 Released 1.5.30 version
* Update translations from zanata (de, pl, uk updated)
* Use string order as a fallback to cldr_order in category listings
* The rainbow flag should be a zwj sequence
* Also display the Unicode version in the emoji info popover
* When looking up emoji or other characters via Unicode codepoint, ignore surrogates and private use characters
* Show the fonts really used to render an emoji in the info popover for the emoji
* Fix typo in translatable string
* itb_emoji.py: Use CLDR order to sort the candidates and the similar emoji if score is the same

* Author: Mike FABIAN <mfabian@redhat.com>
* 21 Mar 2017 Released 1.5.29 version
* Update translations from zanata (de, pl updated)
* Add a “--version” command line option to emoji-picker
* itb_emoji.py: Also read emoji-test.txt (from unicode.org)
* emoji-picker: Set default font to first available in ['Noto Color Emoji', 'Emoji One', 'Symbola']
* Small parsing improvement of emoji-sequences.txt
* Add support to either use U+FE0F VARIATION SELECTOR-16 in emoji sequences or not
* emoji-picker: Show “∅ Search produced empty result.” when nothing matches in a search

* Author: Mike FABIAN <mfabian@redhat.com>
* 18 Mar 2017 Released 1.5.28 version
* Allow query by code point even if Python’s unicodedata.name() does not know the character
* Also read names from emoji-sequences.txt and emoji-zwj-sequences.txt
* itb_emoji.py: Also read emoji-sequences.txt (from unicode.org)
* Fix positioning of info popover (fix a typo in an “if” statement)
* Show emoji properties from unicode.org when debugging is on
* itb_emoji.py: Also read emoji-zwj-sequences.txt (from unicode.org)
* Also use the emoji properties from unicode.org to decide whether to offer a lookup on emojipedia
* Use property “Emoji_Modifier_Base” from emoji-data.txt to check whether an emoji supports skin tones
* itb_emoji.py: Also read emoji-data.txt (from unicode.org)