@@ -16,6 +16,39 @@
   <url type="bugtracker">https://github.com/mike-fabian/ibus-typing-booster/issues</url>
   <url type="help">https://mike-fabian.github.io/ibus-typing-booster/documentation.html</url>
   <releases>
+    <release version="1.5.31" date="2017-04-18" urgency="medium">
+      <description>
+        <ul>
+          <li>
+            Rename option --use_vs16 to --non_fully_qualified
+            (effectivly reversing the default)
+          </li>
+          <li>
+            Make description labels in info popover selectable to be
+            able to copy and paste their contents
+          </li>
+          <li>
+            Sort similar emoji with the same number of matching labels
+            by cldr_order distance
+          </li>
+          <li>
+            Map cldr subgroup 'person-sport' to emojione category
+            'activity'
+          </li>
+          <li>
+            Make the categorie listings and the search work right when
+            using --use_vs16
+          </li>
+          <li>
+            Always store only non-fully-qualified emoji or
+            emoji-sequences in the internal dictionary
+          </li>
+          <li>
+            Update emoji annotations from CLDR
+          </li>
+        </ul>
+      </description>
+    </release>
     <release version="1.5.30" date="2017-03-29" urgency="medium">
       <description>
         <ul>
